test/resources/typer/failing/ExtLambdaError6.scala
object Lambda {
  val f: Int = \(x: Int) -> (\(y: Int) -> x + y);
  Std.printInt(f(41))
}
